--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ env:
   - DJANGO_VERSION=1.3.1 ADDITIONAL_PACKAGES='sphinx'
   - DJANGO_VERSION=1.4 ADDITIONAL_PACKAGES='sphinx'
 install:
-  - pip install -q Django==$DJANGO_VERSION && pip install $ADDITIONAL_PACKAGES
+  - pip install -q Django==$DJANGO_VERSION && pip install $ADDITIONAL_PACKAGES && pip install argparse
   - python setup.py -q install
 script: python runtests.py 
